adjust styles to fix overlap issue, add overflow prop to allow dropdown containers to overflow properly

--- a/src/Styles/_components/_search.scss
+++ b/src/Styles/_components/_search.scss
@@ -117,6 +117,8 @@
 
 .folderAutosuggest {
     position: relative;
+    float: left;
+    width: 100%;
 
     .react-autosuggest {
         &__suggestions-container {
@@ -129,7 +131,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            padding: 1rem;
+            padding: 1.5rem;
             background-color: #0e0f18 !important;
             margin: 0;
             font-size: 1.4rem;
@@ -147,9 +149,14 @@
             color: #fff;
             cursor: pointer;
             background-color: #0e0f18 !important;
+            padding: 1rem 0 0;
 
             &:hover {
                 color: #FF9B3D;
+            }
+
+            &:first-of-type {
+                padding-top: 0;
             }
         }
 
